--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,38 @@ header {
     text-align: center;
 }
 
+.navbar {
+    background-color: #333;
+    padding: 1rem;
+    margin-bottom: 20px;
+}
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar li {
+    margin: 0 15px;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 3px;
+    transition: background-color 0.3s;
+}
+
+.navbar a:hover,
+.navbar a.active {
+    background-color: #555;
+}
+
 h1 {
     color: #333;
 }
@@ -29,4 +61,4 @@ footer {
     bottom: 0;
     width: 100%;
     left: 0;
-} 
+}
